fix: alignment issue of impersonation banner on mobile view.

--- a/src/features/common/Layout/Navbar/Navbar.module.scss
+++ b/src/features/common/Layout/Navbar/Navbar.module.scss
@@ -29,7 +29,7 @@
   &.impersonationMode {
     top: 49px;
     @include xsPhoneView {
-      top: 40px;
+      top: 54px;
     }
   }
   @include xsPhoneView {
